--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,5 @@
 {
+    "name": "digfish/php-smoobu-cli",
     "require": {
         "guzzlehttp/guzzle": "^7.4",
         "vlucas/phpdotenv": "^5.4"
@@ -6,5 +7,11 @@
     "require-dev": {
         "fakerphp/faker": "^1.19",
         "phpunit/phpunit": "^9.5"
+    },
+    "autoload": {
+        "psr-4": {
+            "digfish\\": "src/"
+        }
     }
+
 }
