--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,11 @@
     "license": "Apache-2.0",
     "require": {
         "guzzlehttp/guzzle": "^7.4",
-        "vlucas/phpdotenv": "^5.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.19",
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "vlucas/phpdotenv": "^5.4"
     },
     "autoload": {
         "psr-4": {
