Allow to use specific env vars for production

--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,10 @@
     "description": "Smoobu Property Management System API Client",
     "license": "Apache-2.0",
     "require": {
-        "guzzlehttp/guzzle": "^7.4",
-        "vlucas/phpdotenv": "^5.4"
+        "guzzlehttp/guzzle": "^7.4"
     },
     "require-dev": {
+        "vlucas/phpdotenv": "^5.4",
         "fakerphp/faker": "^1.19",
         "phpunit/phpunit": "^9.5"
     },
